--- a/style.css
+++ b/style.css
@@ -1,16 +1,53 @@
-.table {
-    background-color: aqua;
-    border-collapse: collapse; 
-    width: 100%; 
+*{
+    background-color: hsl(0, 100%, 100%);
+}
+header {
+    background-color: #a30505; 
+    color: rgb(22, 19, 19); 
+    display: flex; 
+    justify-content: space-between; 
+    padding: 20px; 
   }
   
-  .table th, .table td {
-    border: 1px solid black; 
-    padding: 8px; 
-    text-align: left; 
+  .logo {
+    height: 70px;
   }
   
-  .table th {
-    background-color: #f2f2f2; 
-    color: black; 
+  .menu ul {
+    display: flex; 
+    justify-content: center; 
+    list-style: none; 
+    margin: 0; 
+    padding: 0; 
+  }
+  
+  .menu li {
+    margin: 0 20px;
+  }
+  
+  .menu a {
+    color: #0d0b0b;
+    font-size: 40px; 
+    text-decoration: none; 
+    text-transform: uppercase; 
+  }
+
+  aside {
+    background-color: #f4f4f4; 
+    border: 1px solid #ddd; 
+    padding: 20px; 
+    width: 200px; 
+    height: 300px;
+    float: right; 
+  }
+  
+  aside h2 {
+    font-size: 18px; 
+    text-align: center;
+    color: #333; 
+    margin-bottom: 10px;
+  }
+  p{
+    font-size: 20px;
+    text-align: left;
   }
