--- a/style.css
+++ b/style.css
@@ -17,8 +17,9 @@ header {
     display: flex; 
     justify-content: center; 
     list-style: none; 
-    margin: 0; 
-    padding: 0; 
+    margin: 10px; 
+    margin-left: 300px;
+    padding: 0px; 
   }
   
   .menu li {
@@ -36,18 +37,36 @@ header {
     background-color: #f4f4f4; 
     border: 1px solid #ddd; 
     padding: 20px; 
-    width: 200px; 
-    height: 300px;
-    float: right; 
-  }
-  
-  aside h2 {
-    font-size: 18px; 
     text-align: center;
-    color: #333; 
-    margin-bottom: 10px;
+    width: 300px; 
+    height: 400px;
+    float: right; 
   }
   p{
     font-size: 20px;
     text-align: left;
   }
+  div.dropdown{
+    background-color: transparent;
+    width: 100%;
+    height: 40px;
+    margin-top: 0px;
+  }
+  a.dropdown-item{
+    background-color: #908e8e;
+    font-size: 24px;
+  
+  }
+  .dropdown-toggle.btn-lg{
+    margin-top: 120px;
+    background-color: rgb(118, 124, 124);
+    border-color: #0d0b0b;
+    font-size: 32px;
+
+  }
+footer{
+    margin-top: 600px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: end;
+}
