--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     background-color: hsl(0, 100%, 100%);
 }
 body{
-  height: 400px;
+  height: 100%;
   background-image: url(https://www.muchomasquedanza.com/wp-content/uploads/2020/12/Centro-de-Danza-Sandra-Santa-Cruz_Avda.de-Escaleritas56-scaled.jpeg);
   background-size: cover;
   background-repeat:no-repeat;
